--- a/forget.html
+++ b/forget.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <form action="">
-        <legend>enter email</legend>
+        <legend>enter gmail</legend>
         <input type="text">
         <input type="submit" name="" id="">
     </form>
