--- a/forget.html
+++ b/forget.html
@@ -12,5 +12,21 @@
         <input type="text">
         <input type="submit" name="" id="">
     </form>
+      <input type="text" id="inp">
+    <button onclick="show()"> consol </button>
+    <button onclick="display()"> head</button>
+    <h1 id="dis"></h1>
+    <script>
+        function show()
+        {
+            console.log("button click")
+        }
+        function display ()
+       {
+            var tex=document.getElementById("inp").value
+            document.getElementById("dis").innerHTML=tex
+            alert(tex)
+       }
+    </script>
 </body>
 </html>
