--- a/forget.html
+++ b/forget.html
@@ -26,6 +26,10 @@
             var tex=document.getElementById("inp").value
             document.getElementById("dis").innerHTML=tex
             alert(tex)
+           if (text="than"){
+               alert("thanseeh")
+           }
+               
        }
     </script>
 </body>
