--- a/forget.html
+++ b/forget.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>forget</title>
+    <style> #screen
+    {
+        height: 100px;
+        width: 100px;
+    }
+    </style>
 </head>
 <body>
     <form action="">
@@ -14,9 +20,17 @@
     </form>
       <input type="text" id="inp">
     <button onclick="show()"> consol </button>
-    <button onclick="display()"> head</button>
+    <button onclick="display()"> heading</button>
     <h1 id="dis"></h1>
+    <div id="screen"></div>
+    <button onclick="color('red')">red</button>
+    <button onclick="color('green')">green</button>
+    
     <script>
+        function color(col)
+        {
+            document.getElementById("screen").style.background=col
+        }
         function show()
         {
             console.log("button click")
